--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,4 @@
-DB_URI=mongodb+srv://Mohneesh20:Mohneesh20@clusterdata.ieiui.mongodb.net/e-com?retryWrites=true&w=majority
-PORT=3003
+DB_URI=mongodb+srv://Mohneesh20:Mohneesh20@clusterdata.ieiui.mongodb.net/e_com?retryWrites=true&w=majority
+PORT=5000
+PASS_SEC=Mohneesh
+JWT_SEC=Mohneesh_Bansal
