--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,10 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.14",
     "stripe": "^8.186.1"
   },
